sonarr/sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8989
  selector:
    app: sonarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: sonarr
  namespace: sonarr
spec:
  tls:
  - hosts:
    - sonarr.lukeaddison.co.uk
    secretName: sonarr-tls
  rules:
  - host: sonarr.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: sonarr
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: connect
        image: dippynark/python
        volumeMounts:
        - name: link-script
          mountPath: /opt/bin/link.py
          subPath: link.py
        - name: connect
          mountPath: /connect
        command:
        - sh
        - -c
        - |
          while true; do
            find /connect -type f -exec /opt/bin/link.py $WHATBOX_USERNAME $WHATBOX_PASSWORD $WHATBOX_HOSTNAME $SONARR_USERNAME $SONARR_PASSWORD $SONARR_APIKEY $PUSHBULLET_ACCESS_TOKEN {} \;
            sleep 10
          done
      - name: sonarr
        image: dippynark/sonarr:v3
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
        ports:
        - containerPort: 8989
          name: http
        volumeMounts:
        - name: tv-shows
          mountPath: /tv
        - name: config
          mountPath: /config
        - name: whatbox
          mountPath: /mnt/whatbox
        - name: connect
          mountPath: /connect
        - name: connect-script
          mountPath: /opt/bin/connect.sh
          subPath: connect.sh
      volumes:
      - name: tv-shows
        persistentVolumeClaim:
          claimName: tv-shows
      - name: whatbox
        persistentVolumeClaim:
          claimName: whatbox
          readOnly: true
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: connect
        persistentVolumeClaim:
          claimName: connect
      - name: connect-script
        configMap:
          name: sonarr
          items:
          - key: connect.sh
            path: connect.sh
            mode: 0555
      - name: link-script
        configMap:
          name: sonarr
          items:
          - key: link.py
            path: link.py
            mode: 0555
