sonarr/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarr
  namespace: sonarr
spec:
  hosts:
  - sonarr.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway-internal
  http:
  - match:
    - port: 8080
    route:
    - destination:
        host: sonarr
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarr-api
  namespace: sonarr
spec:
  hosts:
  - api.sonarr.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - port: 8443
      uri:
        prefix: /api
    route:
    - destination:
        host: sonarr
